--- a/views/admin/user-form.ejs
+++ b/views/admin/user-form.ejs
@@ -40,10 +40,14 @@
             Email is required.
           <% } else if (error === 'email_exists') { %>
             A user with this email already exists.
+          <% } else if (error === 'name_too_long') { %>
+            Name is too long.
           <% } else if (error === 'password_too_short') { %>
             Password must be at least 6 characters.
           <% } else if (error === 'invalid_role') { %>
             Invalid role selected.
+          <% } else if (error === 'client_key_too_long') { %>
+            Client key is too long.
           <% } else { %>
             An error occurred. Please try again.
           <% } %>
@@ -57,6 +61,14 @@
             <input type="email" id="email" name="email" required 
                    value="<%= user ? user.email : '' %>"
                    placeholder="user@example.com">
+          </div>
+
+          <div class="form-group">
+            <label for="name">Name</label>
+            <input type="text" id="name" name="name"
+                   value="<%= user ? (user.name || '') : '' %>"
+                   placeholder="e.g. Alex"
+                   maxlength="100">
           </div>
 
           <div class="form-group">
