--- a/views/admin/post-edit.ejs
+++ b/views/admin/post-edit.ejs
@@ -19,7 +19,7 @@
       <a href="/admin/foto" class="admin-nav-link">Foto</a>
       <a href="/admin/audit" class="admin-nav-link">Audit Log</a>
       <div class="admin-user">
-        <span><%= user.email %></span>
+        <span><%= user.name || user.email %></span>
       </div>
     </div>
   </header>
