--- a/views/admin/foto.ejs
+++ b/views/admin/foto.ejs
@@ -22,7 +22,7 @@
         <a href="/admin/audit" class="admin-nav-link">Audit Log</a>
       <% } %>
       <div class="admin-user">
-        <span><%= user.email %></span>
+        <span><%= user.name || user.email %></span>
         <a href="/admin/logout" class="admin-nav-link">Logout</a>
       </div>
     </div>
